ChangeLog of simuPOP

BUGS:
  - all known bugs have been cleared.

version 0.8.7 - Not released, available at https://simupop.svn.sourceforge.net/svnroot/simupop/trunk

version 0.8.6 - (Rev 1666) Jun 20, 2008
  - NEW: Polish command line arguments output in a configuration file.
  - NEW: add a function ForwardFreqTrajetory to simulate trajectory of varying
		population size and selection pressure.
  - BUG: Fix a minor simuOpt::saveConfigFile bug
  - BUG: reveal RNG::randMultinomial and RNG::randMultinomialVar
  - BUG: fix a bug that is related to reference count of loaded lists.
  - CHG: allow sample size > population size (give a warning rather than error)
  - CHG: allow recombination rate > 0.5 (adjust to 0.5 and issue a warning)
  - NEW: allow longarg names in option jump and jumpIfFalse in simuOpt.py
  - NEW: load fine-scale recombinate rate and set variable genDist in loaded
		HapMap populations. (loadHapMap.py)
  - CHG: polish tkInter and wxPython parameter input dialog.
  - CHG: Remove parameter order from information field related functions.
  - BUG: Fix a information field + migration bug.
  - NEW: add operation resizeSubPops.
  - BUG: Fix a NuclearfamilySample bug regarding parameter minAffected.
  - NEW: separate sex initialization from initByFreq, initByValue and pyInit
		and add a new operator initSex.
  - BUG: Fix a iterator bug that affects populations with ancestralDepth > 1 
		during evolution.
  - CHG: Remove subpopulation specific virtual subpopulation. This is no longer
		needed with combined virtual splitter.
  - NEW: Add population::ancestor(ind, gen) and population::ancestor(ind, subPop, gen)
		to access an individual in an ancestory generation directly.
  - NEW: support virtual subpopulation in fromSubPop parameter of a migrator.
		This allows sex-specific migraton and more complicated migration
		schemes.
  - NEW: add functions population::locateRelatives and population::setIndexesOfRelatives